[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
authors = ["Travis Hammond <dashdeckers@gmail.com>"]
repository = "https://github.com/dashdeckers/dashboard"
homepage = "https://github.com/dashdeckers/dashboard"
description = "A GUI dashboard for local data."
license-file = "LICENSE"
readme = "README.md"
keywords = [
    "iced",
    "gui",
    "data",
    "parquet",
    "visualization",
    "plotting",
]

[dependencies]
